更新README及配置文件